[package]
name = "machineid-rs"
version = "1.2.1"
edition = "2018"
authors = ["Taptiive <aalexius912@gmail.com>"]
description = "Get an encrypted unique MachineID/HWID/UUID. Inspired by .Net DeviceId."
readme="README.md"
repository="https://github.com/Taptiive/machineid-rs"
license = "MIT OR Apache-2.0"
keywords = ["hwid", "machineid", "hardware-id", "machineuid", "uuid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.22.5"
whoami = "1.2.1"
serde = "1.0.133"
serde_json = "1.0.74"
rust-crypto = "0.2.36"
hex = "0.4.3"
uuid = {version="0.8.2", features = ["v4"]}

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
wmi = "0.9.0"