[package]
name = "machineid-rs"
version = "1.2.3"
edition = "2018"
authors = ["Taptiive <aalexius912@gmail.com>"]
description = "Get an encrypted unique MachineID/HWID/UUID. Inspired by .Net DeviceId."
readme = "README.md"
repository = "https://github.com/Taptiive/machineid-rs"
license = "MIT OR Apache-2.0"
keywords = ["hwid", "machineid", "hardware-id", "machineuid", "uuid"]
categories = ["authentication", "config", "accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.2"
whoami = "1.2.1"
serde = { version = "1.0.133", features = ["derive"] }
hex = "0.4.3"
uuid = { version = "1.3.0", features = ["v4"] }
hmac = "0.12.1"
md-5 = "0.10.1"
sha-1 = "0.10.0"
sha2 = "0.10.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.11.0"
wmi = "0.12.0"

[target.'cfg(unix)'.dependencies]
serde_json = "1.0.74"